feat: crud type amenities
